# seal-generator

./: .gitignore  .gitmodules  Cargo.toml  README.md  seal.scad
chargen/: Cargo.toml
chargen/src/: characters.rs  expansions.rs  idc.rs  ids.rs  lib.rs  svg_data.rs  utils.rs
downloader/: .gitignore  Cargo.toml
downloader/src/: client.rs  downloader.rs  main.rs  types.rs
ids-mapping-parser/: Cargo.toml  test.txt
ids-mapping-parser/src/: expansions.rs  main.rs  mapping.rs  mappings.rs  utils.rs
src/: border.rs  character.rs  main.rs  stl.rs  svgbuilder.rs  triangles.rs
tester/: Cargo.toml  generator.txt
tester/src/: main.rs
vg-converter/: .gitignore  Cargo.toml
vg-converter/src/: characters.rs  kanji.rs  main.rs  xml.rs
