[package]
name = "seal-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = [ "derive" ] }
earcutr = "0.4.3"
random_color = "0.8.0"
svg-path-parser = "0.1.1"
thiserror = "1.0.31"
ttf-parser = "0.15.0"
