[package]
name = "downloader"
version = "0.1.0"
authors = ["Daniel Lim <orcas@octalorca.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
pbr = "1.0.4"
regex = "1.3.4"
reqwest = { version = "0.11.1", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = [ "macros", "rt-multi-thread" ] }
